# A-Super-Small-Shmup

./: CMakeLists.txt  README.md
img/: Boss.aseprite  Boss.json  enemyExplosion.json  playerExplosion.json  ufo.json
src/: Vector2.cpp  Vector2.h  boss.cpp  boss.h  enemy.cpp  enemy.h  enemyBullets.cpp  enemyBullets.h  explosion.cpp  explosion.h  gameManager.cpp  gameManager.h  main.cpp  mainMenu.cpp  mainMenu.h  objectHolder.cpp  objectHolder.h  pause.cpp  pause.h  player.cpp  player.h  playerBullets.cpp  playerBullets.h  powerUp.cpp  powerUp.h  splashScreen.cpp  splashScreen.h  stars.cpp  stars.h  ufo.cpp  ufo.h
